--- a/static/dashboard.css
+++ b/static/dashboard.css
@@ -61,7 +61,7 @@ body {
   margin-top: 30px;
 }
 
-#top-tracks-list {
+#top-tracks-list, #top-artists-list, #top-genres-list {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -73,7 +73,7 @@ body {
     transform: translateX(-50%);
 }
 
-.music-item {
+.music-item, .artist-item, .genre-item {
     background-color: #181818;
     border-radius: 10px;
     overflow: hidden;
@@ -83,24 +83,24 @@ body {
     margin: 0 8px; 
 }
 
-.music-item .cover {
+.music-item .cover, .artist-item .cover {
     width: 100%;
     padding-top: 100%;
     background-size: cover;
     background-position: center;
 }
 
-.music-item .track-info {
+.music-item .track-info, .artist-item .artist-info {
     padding: 10px;
 }
 
-.music-item .track-name {
+.music-item .track-name, .artist-item .artist-name {
     font-size: 1em;
     margin: 5px 0;
     color: #fff;
 }
 
-.music-item .track-artist {
+.music-item .track-artist, .artist-item .artist-genre {
     font-size: 0.8em;
     color: #b3b3b3;
 }
